--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -3390,36 +3390,256 @@ Now available to download in full as a PDF.},
   groups       = {lisa},
 }
 
+@Article{Rupcic2023,
+  author       = {Rupcic, Lea and Pierrat, Eleonore and Saavedra-Rubio, Karen and Thonemann, Nils and Ogugua, Chizoba and Laurent, Alexis},
+  date         = {2023-06},
+  journaltitle = {Transportation Research Part D: Transport and Environment},
+  title        = {Environmental impacts in the civil aviation sector: Current state and guidance},
+  doi          = {10.1016/j.trd.2023.103717},
+  issn         = {1361-9209},
+  pages        = {103717},
+  volume       = {119},
+  groups       = {general_environment},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Afonso2023,
+  author       = {Afonso, Frederico and Sohst, Martin and Diogo, Carlos M.A. and Rodrigues, Simão S. and Ferreira, Ana and Ribeiro, Inês and Marques, Ricardo and Rego, Francisco F.C. and Sohouli, Abdolrasoul and Portugal-Pereira, Joana and Policarpo, Hugo and Soares, Bruno and Ferreira, Bruna and Fernandes, Edgar C. and Lau, Fernando and Suleman, Afzal},
+  date         = {2023-02},
+  journaltitle = {Progress in Aerospace Sciences},
+  title        = {Strategies towards a more sustainable aviation: A systematic review},
+  doi          = {10.1016/j.paerosci.2022.100878},
+  issn         = {0376-0421},
+  pages        = {100878},
+  volume       = {137},
+  groups       = {general_environment},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Ansell2023,
+  author       = {Ansell, Phillip J.},
+  date         = {2023-08},
+  journaltitle = {Progress in Aerospace Sciences},
+  title        = {Review of sustainable energy carriers for aviation: Benefits, challenges, and future viability},
+  doi          = {10.1016/j.paerosci.2023.100919},
+  issn         = {0376-0421},
+  pages        = {100919},
+  volume       = {141},
+  groups       = {general_environment},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Abrantes2024,
+  author       = {Abrantes, Ivo and Ferreira, Ana F. and Magalhães, Leandro B. and Costa, Mário and Silva, André},
+  date         = {2024-03},
+  journaltitle = {Renewable Energy},
+  title        = {The impact of revolutionary aircraft designs on global aviation emissions},
+  doi          = {10.1016/j.renene.2024.119937},
+  issn         = {0960-1481},
+  pages        = {119937},
+  volume       = {223},
+  groups       = {general_environment},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Ficca2023,
+  author       = {Ficca, Antonio and Marulo, Francesco and Sollo, Antonio},
+  date         = {2023-08},
+  journaltitle = {Progress in Aerospace Sciences},
+  title        = {An open thinking for a vision on sustainable green aviation},
+  doi          = {10.1016/j.paerosci.2023.100928},
+  issn         = {0376-0421},
+  pages        = {100928},
+  volume       = {141},
+  groups       = {general_environment},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Manigandan2023,
+  author       = {Manigandan, S and Praveenkumar, T.R. and Ir Ryu, Je and Nath Verma, Tikendra and Pugazhendhi, Arivalagan},
+  date         = {2023-11},
+  journaltitle = {Fuel},
+  title        = {Role of hydrogen on aviation sector: A review on hydrogen storage, fuel flexibility, flame stability, and emissions reduction on gas turbines engines},
+  doi          = {10.1016/j.fuel.2023.129064},
+  issn         = {0016-2361},
+  pages        = {129064},
+  volume       = {352},
+  groups       = {hydrogen_Aviation, gas_hydro_aviation},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Mueller2023,
+  author       = {Mueller, Tobias and Gronau, Steven},
+  date         = {2023-02},
+  journaltitle = {Energies},
+  title        = {Fostering Macroeconomic Research on Hydrogen-Powered Aviation: A Systematic Literature Review on General Equilibrium Models},
+  doi          = {10.3390/en16031439},
+  issn         = {1996-1073},
+  number       = {3},
+  pages        = {1439},
+  volume       = {16},
+  groups       = {hydrogen_Aviation},
+  publisher    = {MDPI AG},
+}
+
+@Article{Degirmenci2023,
+  author       = {Degirmenci, Hursit and Uludag, Alper and Ekici, Selcuk and Karakoc, T. Hikmet},
+  date         = {2023-08},
+  journaltitle = {Progress in Aerospace Sciences},
+  title        = {Challenges, prospects and potential future orientation of hydrogen aviation and the airport hydrogen supply network: A state-of-art review},
+  doi          = {10.1016/j.paerosci.2023.100923},
+  issn         = {0376-0421},
+  pages        = {100923},
+  volume       = {141},
+  groups       = {hydrogen_Aviation},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Eissele2023,
+  author       = {Eissele, Jona and Lafer, Stefan and Mejía Burbano, Cristian and Schließus, Julian and Wiedmann, Tristan and Mangold, Jonas and Strohmayer, Andreas},
+  date         = {2023-03},
+  journaltitle = {Aerospace},
+  title        = {Hydrogen-Powered Aviation—Design of a Hybrid-Electric Regional Aircraft for Entry into Service in 2040},
+  doi          = {10.3390/aerospace10030277},
+  issn         = {2226-4310},
+  number       = {3},
+  pages        = {277},
+  volume       = {10},
+  groups       = {hydrogen_Aviation, actual_hydro_plane},
+  publisher    = {MDPI AG},
+}
+
+@Article{Adler2024,
+  author       = {Adler, Eytan J. and Martins, Joaquim R. R. A.},
+  date         = {2024-05},
+  journaltitle = {Journal of Aircraft},
+  title        = {Blended Wing Body Configuration for Hydrogen-Powered Aviation},
+  doi          = {10.2514/1.c037582},
+  issn         = {1533-3868},
+  number       = {3},
+  pages        = {887--901},
+  volume       = {61},
+  groups       = {hydrogen_Aviation, actual_hydro_plane},
+  publisher    = {American Institute of Aeronautics and Astronautics (AIAA)},
+}
+
+@Article{Tiwari2024,
+  author       = {Tiwari, Saurav and Pekris, Michael J. and Doherty, John J.},
+  date         = {2024-02},
+  journaltitle = {International Journal of Hydrogen Energy},
+  title        = {A review of liquid hydrogen aircraft and propulsion technologies},
+  doi          = {10.1016/j.ijhydene.2023.12.263},
+  issn         = {0360-3199},
+  pages        = {1174--1196},
+  volume       = {57},
+  groups       = {liquid_hydro_aviation},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Yusaf2024,
+  author       = {Yusaf, Talal and Faisal Mahamude, Abu Shadate and Kadirgama, Kumaran and Ramasamy, Devarajan and Farhana, Kaniz and A. Dhahad, Hayder and Abu Talib, ABD Rahim},
+  date         = {2024-01},
+  journaltitle = {International Journal of Hydrogen Energy},
+  title        = {Sustainable hydrogen energy in aviation – A narrative review},
+  doi          = {10.1016/j.ijhydene.2023.02.086},
+  issn         = {0360-3199},
+  pages        = {1026--1045},
+  volume       = {52},
+  groups       = {liquid_hydro_aviation, gas_hydro_aviation},
+  publisher    = {Elsevier BV},
+}
+
+
+@Article{Meissner2023,
+  author       = {Meissner, Robert and Sieb, Patrick and Wollenhaupt, Eric and Haberkorn, Stefan and Wicke, Kai and Wende, Gerko},
+  date         = {2023-09},
+  journaltitle = {International Journal of Hydrogen Energy},
+  title        = {Towards climate-neutral aviation: Assessment of maintenance requirements for airborne hydrogen storage and distribution systems},
+  doi          = {10.1016/j.ijhydene.2023.04.058},
+  issn         = {0360-3199},
+  number       = {75},
+  pages        = {29367--29390},
+  volume       = {48},
+  groups       = {gas_hydro_aviation},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Onorato2022,
+  author       = {Onorato, G. and Proesmans, P. and Hoogreef, M. F. M.},
+  date         = {2022-09},
+  journaltitle = {CEAS Aeronautical Journal},
+  title        = {Assessment of hydrogen transport aircraft: Effects of fuel tank integration},
+  doi          = {10.1007/s13272-022-00601-6},
+  issn         = {1869-5590},
+  number       = {4},
+  pages        = {813--845},
+  volume       = {13},
+  groups       = {actual_hydro_plane},
+  publisher    = {Springer Science and Business Media LLC},
+}
+
+@Article{Prewitz2023,
+  author       = {Prewitz, Marc and Schwärzer, Jonas and Bardenhagen, Andreas},
+  date         = {2023-07},
+  journaltitle = {International Journal of Hydrogen Energy},
+  title        = {Potential analysis of hydrogen storage systems in aircraft design},
+  doi          = {10.1016/j.ijhydene.2023.03.266},
+  issn         = {0360-3199},
+  number       = {65},
+  pages        = {25538--25548},
+  volume       = {48},
+  groups       = {actual_hydro_plane},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Huete2021,
+  author       = {Huete, Jon and Pilidis, Pericles},
+  date         = {2021-10},
+  journaltitle = {International Journal of Hydrogen Energy},
+  title        = {Parametric study on tank integration for hydrogen civil aviation propulsion},
+  doi          = {10.1016/j.ijhydene.2021.08.194},
+  issn         = {0360-3199},
+  number       = {74},
+  pages        = {37049--37062},
+  volume       = {46},
+  groups       = {actual_hydro_plane},
+  publisher    = {Elsevier BV},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: grouping:
 0 AllEntriesGroup:;
-1 StaticGroup:hydro_Plane\;0\;1\;0x8a8a8aff\;\;\;;
 1 StaticGroup:hydrogen\;0\;1\;0x8a8a8aff\;\;\;;
-1 StaticGroup:Hydrogen_Tests\;0\;1\;0x8a8a8aff\;\;\;;
+2 StaticGroup:Hydrogen_Tests\;0\;1\;0x8a8a8aff\;\;\;;
+2 StaticGroup:hydro_Plane\;0\;1\;0x8a8a8aff\;\;\;;
+2 StaticGroup:general_environment\;0\;1\;0x8a8a8aff\;\;\;;
+2 StaticGroup:hydrogen_Aviation\;0\;1\;0x8a8a8aff\;\;\;;
+3 StaticGroup:liquid_hydro_aviation\;0\;1\;0x7c7c7cff\;\;\;;
+3 StaticGroup:gas_hydro_aviation\;0\;0\;0x7c7c7cff\;\;\;;
+2 StaticGroup:actual_hydro_plane\;0\;1\;0x8a8a8aff\;\;\;;
 1 StaticGroup:master\;0\;1\;0x8a8a8aff\;\;\;;
+2 StaticGroup:chaos\;0\;1\;0x8a8a8aff\;\;\;;
 1 StaticGroup:norms\;0\;1\;0x8a8a8aff\;\;\;;
 1 StaticGroup:swith\;0\;1\;0x8a8a8aff\;\;\;;
 1 StaticGroup:webpages\;0\;1\;0x8a8a8aff\;\;\;;
 1 StaticGroup:Report_2\;0\;1\;0x8a8a8aff\;\;\;;
-1 StaticGroup:chaos\;0\;1\;0x8a8a8aff\;\;\;;
 1 StaticGroup:structural tests\;0\;1\;0x8a8a8aff\;\;\;;
-1 StaticGroup:regression\;0\;0\;0x8a8a8aff\;\;\;;
-1 StaticGroup:llms\;0\;1\;0x8a8a8aff\;\;\;;
-1 StaticGroup:curve_Simplifcation\;0\;1\;0x8a8a8aff\;\;\;;
-1 StaticGroup:machine_learning\;0\;1\;0x8a8a8aff\;\;\;;
-1 StaticGroup:chaos\;0\;0\;0x8a8a8aff\;\;\;;
-1 StaticGroup:kmeans\;0\;0\;0x8a8a8aff\;\;\;;
-1 StaticGroup:scikit_learn\;0\;1\;0x8a8a8aff\;\;\;;
-1 StaticGroup:meshio\;0\;1\;0x8a8a8aff\;\;\;;
-1 StaticGroup:vtk\;0\;1\;0x8a8a8aff\;\;\;;
+1 StaticGroup:machine_learning\;0\;0\;0x8a8a8aff\;\;\;;
+2 StaticGroup:curve_Simplifcation\;0\;1\;0x8a8a8aff\;\;\;;
+2 StaticGroup:regression\;0\;0\;0x8a8a8aff\;\;\;;
+2 StaticGroup:llms\;0\;1\;0x8a8a8aff\;\;\;;
 1 StaticGroup:technische_mechanik\;0\;1\;0x8a8a8aff\;\;\;;
-1 StaticGroup:python\;0\;1\;0x8a8a8aff\;\;\;;
-1 StaticGroup:sympy\;0\;1\;0x8a8a8aff\;\;\;;
-1 StaticGroup:fenics\;0\;1\;0x8a8a8aff\;\;\;;
-1 StaticGroup:pytorch\;0\;1\;0x8a8a8aff\;\;\;;
-1 StaticGroup:python_tools\;0\;1\;\;\;\;;
-1 StaticGroup:optimization_algorithm\;0\;1\;\;\;\;;
+1 StaticGroup:python\;0\;0\;0x8a8a8aff\;\;\;;
+2 StaticGroup:sympy\;0\;1\;0x8a8a8aff\;\;\;;
+2 StaticGroup:fenics\;0\;1\;0x8a8a8aff\;\;\;;
+2 StaticGroup:pytorch\;0\;1\;0x8a8a8aff\;\;\;;
+2 StaticGroup:python_tools\;0\;1\;\;\;\;;
+2 StaticGroup:vtk\;0\;1\;0x8a8a8aff\;\;\;;
+2 StaticGroup:meshio\;0\;1\;0x8a8a8aff\;\;\;;
+2 StaticGroup:scikit_learn\;0\;1\;0x8a8a8aff\;\;\;;
+2 StaticGroup:kmeans\;0\;0\;0x8a8a8aff\;\;\;;
+1 StaticGroup:optimization_algorithm\;0\;0\;\;\;\;;
 2 StaticGroup:optimization_books\;0\;1\;\;\;\;;
 2 StaticGroup:mdo\;0\;1\;\;\;\;;
 2 StaticGroup:mlti_objective\;0\;1\;\;\;\;;
