refs added to inital background, inshallah

--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -3505,7 +3505,7 @@ Now available to download in full as a PDF.},
   number       = {3},
   pages        = {277},
   volume       = {10},
-  groups       = {hydrogen_Aviation, actual_hydro_plane},
+  groups       = {hydrogen_Aviation, actual_hydro_plane, integral_NON_Wing},
   publisher    = {MDPI AG},
 }
 
@@ -3519,7 +3519,7 @@ Now available to download in full as a PDF.},
   number       = {3},
   pages        = {887--901},
   volume       = {61},
-  groups       = {hydrogen_Aviation, actual_hydro_plane},
+  groups       = {hydrogen_Aviation, actual_hydro_plane, integral_NON_Wing},
   publisher    = {American Institute of Aeronautics and Astronautics (AIAA)},
 }
 
@@ -3574,7 +3574,7 @@ Now available to download in full as a PDF.},
   number       = {4},
   pages        = {813--845},
   volume       = {13},
-  groups       = {actual_hydro_plane},
+  groups       = {actual_hydro_plane, integral_NON_Wing},
   publisher    = {Springer Science and Business Media LLC},
 }
 
@@ -3588,7 +3588,7 @@ Now available to download in full as a PDF.},
   number       = {65},
   pages        = {25538--25548},
   volume       = {48},
-  groups       = {actual_hydro_plane},
+  groups       = {actual_hydro_plane, integral_NON_Wing},
   publisher    = {Elsevier BV},
 }
 
@@ -3602,8 +3602,78 @@ Now available to download in full as a PDF.},
   number       = {74},
   pages        = {37049--37062},
   volume       = {46},
-  groups       = {actual_hydro_plane},
+  groups       = {actual_hydro_plane, integral_NON_Wing},
   publisher    = {Elsevier BV},
+}
+
+@Article{Baroutaji2019,
+  author       = {Baroutaji, Ahmad and Wilberforce, Tabbi and Ramadan, Mohamad and Olabi, Abdul Ghani},
+  date         = {2019-05},
+  journaltitle = {Renewable and Sustainable Energy Reviews},
+  title        = {Comprehensive investigation on hydrogen and fuel cell technology in the aviation and aerospace sectors},
+  doi          = {10.1016/j.rser.2019.02.022},
+  issn         = {1364-0321},
+  pages        = {31--40},
+  volume       = {106},
+  groups       = {integral_NON_Wing},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Huete2022,
+  author       = {Huete, J. and Nalianda, D. and Pilidis, P.},
+  date         = {2022-06},
+  journaltitle = {The Aeronautical Journal},
+  title        = {Impact of tank gravimetric efficiency on propulsion system integration for a first-generation hydrogen civil airliner},
+  doi          = {10.1017/aer.2022.60},
+  issn         = {2059-6464},
+  number       = {1302},
+  pages        = {1324--1332},
+  volume       = {126},
+  groups       = {actual_hydro_plane, integral_NON_Wing},
+  publisher    = {Cambridge University Press (CUP)},
+}
+
+@Article{Cipolla2022,
+  author       = {Cipolla, Vittorio and Zanetti, Davide and Abu Salem, Karim and Binante, Vincenzo and Palaia, Giuseppe},
+  date         = {2022-07},
+  journaltitle = {Applied Sciences},
+  title        = {A Parametric Approach for Conceptual Integration and Performance Studies of Liquid Hydrogen Short–Medium Range Aircraft},
+  doi          = {10.3390/app12146857},
+  issn         = {2076-3417},
+  number       = {14},
+  pages        = {6857},
+  volume       = {12},
+  groups       = {actual_hydro_plane, integral_NON_Wing},
+  publisher    = {MDPI AG},
+}
+
+@Article{Verstraete2013,
+  author       = {Verstraete, Dries},
+  date         = {2013-11},
+  journaltitle = {International Journal of Hydrogen Energy},
+  title        = {Long range transport aircraft using hydrogen fuel},
+  doi          = {10.1016/j.ijhydene.2013.09.021},
+  issn         = {0360-3199},
+  number       = {34},
+  pages        = {14824--14831},
+  volume       = {38},
+  groups       = {integral_NON_Wing},
+  publisher    = {Elsevier BV},
+}
+
+@Article{onorato2021fuel,
+  author = {Onorato, Giuseppe},
+  title  = {Fuel Tank Integration for Hydrogen Airliners},
+  groups = {integral_NON_Wing},
+  year   = {2021},
+}
+
+@Article{verstraete2009potential,
+  author    = {Verstraete, Dries},
+  title     = {The Potential of Liquid Hydrogen for long range aircraft propulsion},
+  groups    = {integral_NON_Wing},
+  publisher = {Cranfield University},
+  year      = {2009},
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
@@ -3618,6 +3688,7 @@ Now available to download in full as a PDF.},
 3 StaticGroup:liquid_hydro_aviation\;0\;1\;0x7c7c7cff\;\;\;;
 3 StaticGroup:gas_hydro_aviation\;0\;0\;0x7c7c7cff\;\;\;;
 2 StaticGroup:actual_hydro_plane\;0\;1\;0x8a8a8aff\;\;\;;
+3 StaticGroup:integral_NON_Wing\;0\;1\;0x7c7c7cff\;\;\;;
 1 StaticGroup:master\;0\;1\;0x8a8a8aff\;\;\;;
 2 StaticGroup:chaos\;0\;1\;0x8a8a8aff\;\;\;;
 1 StaticGroup:norms\;0\;1\;0x8a8a8aff\;\;\;;
