before resolving duplicates of bib file

--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -519,14 +519,6 @@
   year   = {2006},
 }
 
-@Misc{kmeans_Visual_Explanation,
-  title  = {k-means++ visual explanation},
-  note   = {https://theory.stanford.edu/~sergei/slides/BATS-Means.pdf - 30.11.2021},
-  url    = {https://theory.stanford.edu/~sergei/slides/BATS-Means.pdf},
-  groups = {master, kmeans},
-  owner  = {Sergei Vassilvitskii},
-}
-
 @Misc{kmeans_Init_Points,
   title  = {k-means finding set of initial points},
   note   = {https://theory.stanford.edu/~sergei/slides/kdd10-thclust.pdf - 30.11.2021},
@@ -704,18 +696,6 @@ Now available to download in full as a PDF.},
   groups  = {master, scikit_learn},
   journal = {Journal of Machine Learning Research},
   year    = {2011},
-}
-
-@Article{Virtanen2020,
-  author  = {Virtanen, Pauli and Gommers, Ralf and Oliphant, Travis E. and Haberland, Matt and Reddy, Tyler and Cournapeau, David and Burovski, Evgeni and Peterson, Pearu and Weckesser, Warren and Bright, Jonathan and {van der Walt}, St{\'e}fan J. and Brett, Matthew and Wilson, Joshua and Millman, K. Jarrod and Mayorov, Nikolay and Nelson, Andrew R. J. and Jones, Eric and Kern, Robert and Larson, Eric and Carey, C J and Polat, {\.I}lhan and Feng, Yu and Moore, Eric W. and {VanderPlas}, Jake and Laxalde, Denis and Perktold, Josef and Cimrman, Robert and Henriksen, Ian and Quintero, E. A. and Harris, Charles R. and Archibald, Anne M. and Ribeiro, Ant{\^o}nio H. and Pedregosa, Fabian and {van Mulbregt}, Paul and {SciPy 1.0 Contributors}},
-  journal = {Nature Methods},
-  title   = {{{SciPy} 1.0: Fundamental Algorithms for Scientific Computing in Python}},
-  year    = {2020},
-  pages   = {261--272},
-  volume  = {17},
-  adsurl  = {https://rdcu.be/b08Wh},
-  doi     = {10.1038/s41592-019-0686-2},
-  groups  = {master},
 }
 
 @Article{Brunton2016,
@@ -1092,27 +1072,6 @@ Now available to download in full as a PDF.},
   year      = {2006},
 }
 
-@Misc{APUS_0,
-  author = {Unkown},
-  month  = feb,
-  note   = {https://group.apus-aero.com/zero-emission - 27.02.2024},
-  title  = {APUS, aircraft manufacturer},
-  year   = {2024},
-  groups = {webpages},
-  url    = {https://group.apus-aero.com/zero-emission/},
-}
-
-
-@Misc{APUS_1,
-  author = {Unkown},
-  month  = feb,
-  note   = {https://group.apus-aero.com/wp-content/uploads/2023/10/APUS_i-2_Broschuere_20231027_Web.pdf - 27.02.2024},
-  title  = {APUS, aircraft manufacturer},
-  year   = {2024},
-  groups = {webpages},
-  url    = {https://group.apus-aero.com/wp-content/uploads/2023/10/APUS_i-2_Broschuere_20231027_Web.pdf},
-}
-
 @Misc{img_Transport,
   author = {Bernd Dittrich},
   title  = {Image, shall represent transportation},
@@ -1331,7 +1290,7 @@ Now available to download in full as a PDF.},
   number       = {36},
   pages        = {13705--13730},
   volume       = {48},
-  groups       = {Report_2},
+  groups       = {Report_2, hydro_Harms},
   publisher    = {Elsevier BV},
 }
 
@@ -2048,14 +2007,6 @@ Now available to download in full as a PDF.},
   publisher    = {Wiley},
 }
 
-@Misc{link_Kmeans_Img_Proc,
-  title  = {k-means++ visual explanation},
-  note   = {https://stanford.edu/~shervine/teaching/cs-229/cheatsheet-unsupervised-learning - 03.04.2024},
-  url    = {https://stanford.edu/~shervine/teaching/cs-229/cheatsheet-unsupervised-learning},
-  groups = {master, kmeans},
-  owner  = {Shervine Amidi, Stanford},
-}
-
  
 @Article{Ikotun2023,
   author       = {Ikotun, Abiodun M. and Ezugwu, Absalom E. and Abualigah, Laith and Abuhaija, Belal and Heming, Jia},
@@ -2280,21 +2231,6 @@ Now available to download in full as a PDF.},
   year         = {2024},
 }
 
- 
-@Article{Chen2024,
-  author       = {Chen, Richard J. and Ding, Tong and Lu, Ming Y. and Williamson, Drew F. K. and Jaume, Guillaume and Song, Andrew H. and Chen, Bowen and Zhang, Andrew and Shao, Daniel and Shaban, Muhammad and Williams, Mane and Oldenburg, Lukas and Weishaupt, Luca L. and Wang, Judy J. and Vaidya, Anurag and Le, Long Phi and Gerber, Georg and Sahai, Sharifa and Williams, Walt and Mahmood, Faisal},
-  date         = {2024-03},
-  journaltitle = {Nature Medicine},
-  title        = {Towards a general-purpose foundation model for computational pathology},
-  doi          = {10.1038/s41591-024-02857-3},
-  issn         = {1546-170X},
-  number       = {3},
-  pages        = {850--862},
-  volume       = {30},
-  groups       = {scikit_learn},
-  publisher    = {Springer Science and Business Media LLC},
-}
-
 @Misc{link_Cluster_Meth,
   author = {scikit-learn},
   title  = {Comparing different clustering algorithms on toy datasets},
@@ -2417,15 +2353,6 @@ Now available to download in full as a PDF.},
   publisher = {The Eurographics Association},
 }
 
-@Misc{Gross2017,
-  author    = {Gross, Dietmar and Ehlers, Wolfgang and Wriggers, Peter and Schröder, Jörg and Müller, Ralf},
-  date      = {2017},
-  title     = {Formeln und Aufgaben zur Technischen Mechanik 2},
-  doi       = {10.1007/978-3-662-53675-9},
-  groups    = {technische_mechanik},
-  publisher = {Springer Berlin Heidelberg},
-}
-
 @Misc{Spura2019,
   author    = {Spura, Christian},
   date      = {2019},
@@ -2449,24 +2376,6 @@ Now available to download in full as a PDF.},
   date      = {2021},
   title     = {Technische Mechanik 3},
   doi       = {10.1007/978-3-662-63065-5},
-  groups    = {technische_mechanik},
-  publisher = {Springer Berlin Heidelberg},
-}
-
-@Misc{Gross2021b,
-  author    = {Gross, Dietmar and Ehlers, Wolfgang and Wriggers, Peter and Schröder, Jörg and Müller, Ralf},
-  date      = {2021},
-  title     = {Formeln und Aufgaben zur Technischen Mechanik 1},
-  doi       = {10.1007/978-3-662-61864-6},
-  groups    = {technische_mechanik},
-  publisher = {Springer Berlin Heidelberg},
-}
-
-@Misc{Gross2019a,
-  author    = {Gross, Dietmar and Ehlers, Wolfgang and Wriggers, Peter and Schröder, Jörg and Müller, Ralf},
-  date      = {2019},
-  title     = {Formeln und Aufgaben zur Technischen Mechanik 3},
-  doi       = {10.1007/978-3-662-59681-4},
   groups    = {technische_mechanik},
   publisher = {Springer Berlin Heidelberg},
 }
@@ -2746,19 +2655,6 @@ Now available to download in full as a PDF.},
   year         = {2024},
 }
 
-@Article{Chen2024a,
-  author       = {Chen, Richard and Ding, Tong and Lu, Ming and Williamson, Drew and Jaume, Guillaume and Song, Andrew and Chen, Bowen and Zhang, Andrew and Shao, Daniel and Shaban, Muhammad and Williams, Mane and Oldenburg, Lukas and Weishaupt, Luca and Wang, Judy and Vaidya, Anurag and Le, Long and Gerber, Georg and Sahai, Sharifa and Williams, Walt and Mahmood, Faisal},
-  date         = {2024-03},
-  journaltitle = {Nature Medicine},
-  title        = {Towards a general-purpose foundation model for computational pathology},
-  doi          = {10.1038/s41591-024-02857-3},
-  number       = {3},
-  pages        = {850-862},
-  volume       = {30},
-  groups       = {pytorch},
-  publisher    = {Springer Science and Business Media LLC},
-}
-
 @InProceedings{NEURIPS2023_4a47dd69,
   author    = {Zhang, Beichen and Zhou, Kun and Wei, Xilin and Zhao, Xin and Sha, Jing and Wang, Shijin and Wen, Ji-Rong},
   booktitle = {Advances in Neural Information Processing Systems},
@@ -2834,22 +2730,6 @@ Now available to download in full as a PDF.},
   month        = {3},
   publisher    = {Association for the Advancement of Artificial Intelligence (AAAI)},
   year         = {2024},
-}
-
-@Article{Virtanen2020a,
-  author       = {Virtanen, Pauli and Gommers, Ralf and Oliphant, Travis and Haberland, Matt and Reddy, Tyler and Cournapeau, David and Burovski, Evgeni and Peterson, Pearu and Weckesser, Warren and Bright, Jonathan and Van Der Walt, Stéfan and Brett, Matthew and Wilson, Joshua and Millman, K and Mayorov, Nikolay and Nelson, Andrew and Jones, Eric and Kern, Robert and Larson, Eric and Carey, C and Polat, İlhan and Feng, Yu and Moore, Eric and Vanderplas, Jake and Laxalde, Denis and Perktold, Josef and Cimrman, Robert and Henriksen, Ian and Quintero, E and Harris, Charles and Archibald, Anne and Ribeiro, Antônio and Pedregosa, Fabian and Van Mulbregt, Paul and Vijaykumar, Aditya and Bardelli, Alessandro and Rothberg, Alex and Hilboll, Andreas and Kloeckner, Andreas and Scopatz, Anthony and Lee, Antony and Rokem, Ariel and Woods, C and Fulton, Chad and Masson, Charles and Häggström, Christian and Fitzgerald, Clark and Nicholson, David and Hagen, David and Pasechnik, Dmitrii and Olivetti, Emanuele and Martin, Eric and Wieser, Eric and Silva, Fabrice and Lenders, Felix and Wilhelm, Florian and Young, G and Price, Gavin and Ingold, Gert-Ludwig and Allen, Gregory and Lee, Gregory and Audren, Hervé and Probst, Irvin and Dietrich, Jörg and Silterra, Jacob and Webber, James and Slavič, Janko and Nothman, Joel and Buchner, Johannes and Kulick, Johannes and Schönberger, Johannes and De Miranda Cardoso, José and Reimer, Joscha and Harrington, Joseph and Rodríguez, Juan and Nunez-Iglesias, Juan and Kuczynski, Justin and Tritz, Kevin and Thoma, Martin and Newville, Matthew and Kümmerer, Matthias and Bolingbroke, Maximilian and Tartre, Michael and Pak, Mikhail and Smith, Nathaniel and Nowaczyk, Nikolai and Shebanov, Nikolay and Pavlyk, Oleksandr and Brodtkorb, Per and Lee, Perry and Mcgibbon, Robert and Feldbauer, Roman and Lewis, Sam and Tygier, Sam and Sievert, Scott and Vigna, Sebastiano and Peterson, Stefan and More, Surhud and Pudlik, Tadeusz and Oshima, Takuya and Pingel, Thomas and Robitaille, Thomas and Spura, Thomas and Jones, Thouis and Cera, Tim and Leslie, Tim and Zito, Tiziano and Krauss, Tom and Upadhyay, Utkarsh and Halchenko, Yaroslav and Vázquez-Baeza, Yoshiki},
-  date         = {2020-02-03},
-  journaltitle = {Nature Methods},
-  title        = {SciPy 1.0: fundamental algorithms for scientific computing in Python},
-  doi          = {10.1038/s41592-019-0686-2},
-  number       = {3},
-  pages        = {261-272},
-  volume       = {17},
-  day          = {3},
-  groups       = {sympy},
-  month        = {2},
-  publisher    = {Springer Science and Business Media LLC},
-  year         = {2020},
 }
 
 @Article{symbeam_tool,
@@ -2965,24 +2845,6 @@ Now available to download in full as a PDF.},
   doi       = {10.1007/978-3-8348-2011-2},
   groups    = {optimization_books},
   publisher = {Springer Fachmedien Wiesbaden},
-}
-
-@Misc{Stein2018,
-  author    = {Stein, Oliver},
-  date      = {2018},
-  title     = {Grundzüge der Globalen Optimierung},
-  doi       = {10.1007/978-3-662-55360-2},
-  groups    = {optimization_books},
-  publisher = {Springer Berlin Heidelberg},
-}
-
-@Misc{Stein2018a,
-  author    = {Stein, Oliver},
-  date      = {2018},
-  title     = {Grundzüge der Nichtlinearen Optimierung},
-  doi       = {10.1007/978-3-662-55593-4},
-  groups    = {optimization_books},
-  publisher = {Springer Berlin Heidelberg},
 }
 
 @Misc{Koop2018,
@@ -3668,12 +3530,228 @@ Now available to download in full as a PDF.},
   year   = {2021},
 }
 
-@Article{verstraete2009potential,
-  author    = {Verstraete, Dries},
-  title     = {The Potential of Liquid Hydrogen for long range aircraft propulsion},
-  groups    = {integral_NON_Wing},
-  publisher = {Cranfield University},
-  year      = {2009},
+
+@Article{FloridoBenitez2023,
+  author       = {Florido-Benítez, Lázaro},
+  date         = {2023-02},
+  journaltitle = {Logistics},
+  title        = {The Role of the Top 50 US Cargo Airports and 25 Air Cargo Airlines in the Logistics of E-Commerce Companies},
+  doi          = {10.3390/logistics7010008},
+  issn         = {2305-6290},
+  number       = {1},
+  pages        = {8},
+  volume       = {7},
+  groups       = {motivation_parts},
+  publisher    = {MDPI AG},
+}
+
+@Article{Li2024,
+  author       = {Li, Xue and Liu, Qiuping},
+  date         = {2024-04},
+  journaltitle = {International Journal of Education and Humanities},
+  title        = {Research on the Development Direction and Countermeasures of Civil Aviation Ticketing Offices: Taking Fuyang Civil Aviation Ticket Office as an Example},
+  doi          = {10.54097/njb5hr17},
+  issn         = {2770-6702},
+  number       = {2},
+  pages        = {232--235},
+  volume       = {13},
+  groups       = {motivation_parts},
+  publisher    = {Darcy & Roy Press Co. Ltd.},
+}
+
+@Article{Lai2022,
+  author       = {Lai, Y.Y. and Christley, E. and Kulanovic, A. and Teng, C.C. and Björklund, A. and Nordensvärd, J. and Karakaya, E. and Urban, F.},
+  date         = {2022-03},
+  journaltitle = {Renewable and Sustainable Energy Reviews},
+  title        = {Analysing the opportunities and challenges for mitigating the climate impact of aviation: A narrative review},
+  doi          = {10.1016/j.rser.2021.111972},
+  issn         = {1364-0321},
+  pages        = {111972},
+  volume       = {156},
+  groups       = {motivation_parts},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Zachariah2023,
+  author       = {Zachariah, Renju Aleyamma and Sharma, Sahil and Kumar, Vijay},
+  date         = {2023-05},
+  journaltitle = {Multimedia Tools and Applications},
+  title        = {Systematic review of passenger demand forecasting in aviation industry},
+  doi          = {10.1007/s11042-023-15552-1},
+  issn         = {1573-7721},
+  number       = {30},
+  pages        = {46483--46519},
+  volume       = {82},
+  groups       = {motivation_parts},
+  publisher    = {Springer Science and Business Media LLC},
+}
+
+@Article{Lawson2023,
+  author       = {Lawson, Catherine T. and Rajan, Karthik Soundara},
+  date         = {2023-05},
+  journaltitle = {Journal of Homeland Security and Emergency Management},
+  title        = {Unmanned Aircraft Systems (UAS): Applications and Integration into Hazard Mitigation Planning},
+  doi          = {10.1515/jhsem-2021-0090},
+  issn         = {1547-7355},
+  number       = {3},
+  pages        = {271--305},
+  volume       = {20},
+  groups       = {motivation_parts},
+  publisher    = {Walter de Gruyter GmbH},
+}
+
+@Article{Herstein2023,
+  author       = {Herstein, Jocelyn J. and Figi, Claire E. and Le, Aurora B. and Beam, Elizabeth L. and Lawler, James V. and Schnaubelt, Elizabeth R. and Carter, Gary W. and Lowe, John J. and Gibbs, Shawn G.},
+  date         = {2023-05},
+  journaltitle = {Air Medical Journal},
+  title        = {An Updated Review of Literature for Air Medical Evacuation High-Level Containment Transport During the Coronavirus Disease 2019 Pandemic},
+  doi          = {10.1016/j.amj.2022.12.007},
+  issn         = {1067-991X},
+  number       = {3},
+  pages        = {201--209},
+  volume       = {42},
+  groups       = {motivation_parts},
+  publisher    = {Elsevier BV},
+}
+
+@InBook{Pak2021,
+  author    = {Pak, Henry},
+  booktitle = {Automated Low-Altitude Air Delivery},
+  date      = {2021-11},
+  title     = {Use-Cases for Heavy Lift Unmanned Cargo Aircraft},
+  doi       = {10.1007/978-3-030-83144-8_3},
+  isbn      = {9783030831448},
+  pages     = {49--72},
+  publisher = {Springer International Publishing},
+  groups    = {motivation_parts},
+  issn      = {2194-8259},
+}
+
+@Article{Hamilton2022,
+  author       = {Hamilton, Jonathan and de Boer, Gijs and Doddi, Abhiram and Lawrence, Dale A.},
+  date         = {2022-11},
+  journaltitle = {Atmospheric Measurement Techniques},
+  title        = {The DataHawk2 uncrewed aircraft system for atmospheric research},
+  doi          = {10.5194/amt-15-6789-2022},
+  issn         = {1867-8548},
+  number       = {22},
+  pages        = {6789--6806},
+  volume       = {15},
+  groups       = {motivation_parts},
+  publisher    = {Copernicus GmbH},
+}
+
+@Article{Marzioli2024,
+  author       = {Marzioli, Paolo and Garofalo, Riccardo and Frezza, Lorenzo and Nyawade, Andrew and Santilli, Giancarlo and JahJah, Munzer and Santoni, Fabio and Piergentili, Fabrizio},
+  date         = {2024-03},
+  journaltitle = {Drones},
+  title        = {Performance Analysis of a Wildlife Tracking CubeSat Mission Extension to Drones and Stratospheric Vehicles},
+  doi          = {10.3390/drones8040129},
+  issn         = {2504-446X},
+  number       = {4},
+  pages        = {129},
+  volume       = {8},
+  groups       = {motivation_parts},
+  publisher    = {MDPI AG},
+}
+
+@Article{Tsokas2022,
+  author       = {Tsokas, Arsenios and Rysz, Maciej and Pardalos, Panos M. and Dipple, Kathleen},
+  date         = {2022-11},
+  journaltitle = {Expert Systems with Applications},
+  title        = {SAR data applications in earth observation: An overview},
+  doi          = {10.1016/j.eswa.2022.117342},
+  issn         = {0957-4174},
+  pages        = {117342},
+  volume       = {205},
+  groups       = {motivation_parts},
+  publisher    = {Elsevier BV},
+}
+
+@InProceedings{Bikov2022,
+  author    = {Bikov, Tsvyatko and Mihaylov, Grigor and Iliev, Teodor and Stoyanov, Ivaylo},
+  booktitle = {2022 8th International Conference on Energy Efficiency and Agricultural Engineering (EE&amp;AE)},
+  date      = {2022-06},
+  title     = {Drone Surveillance in the Modern Agriculture},
+  doi       = {10.1109/eeae53789.2022.9831375},
+  publisher = {IEEE},
+  groups    = {motivation_parts},
+}
+
+@Book{Meijer2020,
+  author    = {Meijer, Gert},
+  date      = {2020-07},
+  title     = {Fundamentals of Aviation Operations},
+  doi       = {10.4324/9780429318801},
+  isbn      = {9780429318801},
+  publisher = {Routledge},
+  groups    = {motivation_parts},
+}
+
+@Article{Lenaerts2021,
+  author       = {Lenaerts, Bert and Allroggen, Florian and Malina, Robert},
+  date         = {2021-03},
+  journaltitle = {Journal of Air Transport Management},
+  title        = {The economic impact of aviation: A review on the role of market access},
+  doi          = {10.1016/j.jairtraman.2020.102000},
+  issn         = {0969-6997},
+  pages        = {102000},
+  volume       = {91},
+  groups       = {motivation_parts},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Zhang2020,
+  author       = {Zhang, Fangni and Graham, Daniel J.},
+  date         = {2020-03},
+  journaltitle = {Transport Reviews},
+  title        = {Air transport and economic growth: a review of the impact mechanism and causal relationships},
+  doi          = {10.1080/01441647.2020.1738587},
+  issn         = {1464-5327},
+  number       = {4},
+  pages        = {506--528},
+  volume       = {40},
+  groups       = {motivation_parts},
+  publisher    = {Informa UK Limited},
+}
+
+@Article{Zaporozhets2021,
+  author       = {Zaporozhets, Oleksandr and Isaienko, Volodymyr and Synylo, Kateryna},
+  date         = {2021-07},
+  journaltitle = {CEAS Aeronautical Journal},
+  title        = {PARE preliminary analysis of ACARE FlightPath 2050 environmental impact goals},
+  doi          = {10.1007/s13272-021-00525-7},
+  issn         = {1869-5590},
+  number       = {3},
+  pages        = {653--667},
+  volume       = {12},
+  groups       = {motivation_parts},
+  publisher    = {Springer Science and Business Media LLC},
+}
+
+@Misc{kmeans_Visual_Explanation,
+  title  = {k-means++ visual explanation},
+  note   = {https://theory.stanford.edu/~sergei/slides/BATS-Means.pdf - 30.11.2021},
+  url    = {https://theory.stanford.edu/~sergei/slides/BATS-Means.pdf},
+  groups = {master, kmeans},
+  owner  = {Sergei Vassilvitskii},
+}
+
+@Misc{link_Kmeans_Img_Proc,
+  title  = {kmeans},
+  note   = {https://stanford.edu/~shervine/teaching/cs-229/cheatsheet-unsupervised-learning - 03.04.2024},
+  url    = {https://stanford.edu/~shervine/teaching/cs-229/cheatsheet-unsupervised-learning},
+  groups = {master, kmeans},
+  owner  = {Shervine Amidi, Stanford},
+}
+
+@Misc{Gross2021b,
+  author    = {Gross, Dietmar and Ehlers, Wolfgang and Wriggers, Peter and Schröder, Jörg and Müller, Ralf},
+  date      = {2021},
+  title     = {Formeln und Aufgaben zur Technischen Mechanik 1},
+  doi       = {10.1007/978-3-662-61864-6},
+  groups    = {technische_mechanik},
+  publisher = {Springer Berlin Heidelberg},
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
@@ -3684,9 +3762,11 @@ Now available to download in full as a PDF.},
 2 StaticGroup:Hydrogen_Tests\;0\;1\;0x8a8a8aff\;\;\;;
 2 StaticGroup:hydro_Plane\;0\;1\;0x8a8a8aff\;\;\;;
 2 StaticGroup:general_environment\;0\;1\;0x8a8a8aff\;\;\;;
+3 StaticGroup:motivation_parts\;0\;1\;0x7c7c7cff\;\;\;;
 2 StaticGroup:hydrogen_Aviation\;0\;1\;0x8a8a8aff\;\;\;;
 3 StaticGroup:liquid_hydro_aviation\;0\;1\;0x7c7c7cff\;\;\;;
 3 StaticGroup:gas_hydro_aviation\;0\;0\;0x7c7c7cff\;\;\;;
+3 StaticGroup:hydro_Harms\;0\;1\;0x7c7c7cff\;\;\;;
 2 StaticGroup:actual_hydro_plane\;0\;1\;0x8a8a8aff\;\;\;;
 3 StaticGroup:integral_NON_Wing\;0\;1\;0x7c7c7cff\;\;\;;
 1 StaticGroup:master\;0\;1\;0x8a8a8aff\;\;\;;
